[package]
name = "nerrs"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "CRF-based Named Entity Recognition for Persian text"
license = "MIT"
keywords = ["nlp", "persian", "farsi", "ner", "named-entity"]
categories = ["text-processing", "science"]
authors = ["Amirhossein Ghanipour <d3v1ll3n@gmail.com>"]
repository = "https://github.com/amirhosseinghanipour/nerrs"
homepage = "https://github.com/amirhosseinghanipour/nerrs"
documentation = "https://docs.rs/nerrs"
readme = "README.md"
exclude = [".github/", "tests/"]

[features]
hf-hub = ["dep:hf-hub"]

[dependencies]
crfrs = "0.1"
thiserror = "2"
hf-hub = { version = "0.3", optional = true }
